--- a/index.css
+++ b/index.css
@@ -30,6 +30,10 @@ body {
     right: 1rem;
 }
 
+main {
+    padding-bottom: 100px;
+}
+
 /* Group list */
 .groups {
     list-style: none;
@@ -57,4 +61,13 @@ body {
     font-size: var(--description);
     color: var(--secondary-text-color);
     margin: 0;
+}
+
+/* Nav-bar */
+.nav-bar {
+    display: flex;
+    justify-content: center;
+    bottom: 0;
+    width: 100%;
+    background-color: var(--primary-color);
 }
