--- a/index.css
+++ b/index.css
@@ -28,6 +28,9 @@ body {
     cursor: pointer;
     position: absolute;
     right: 1rem;
+    outline-color: black;
+    outline-style: dashed;
+  
 }
 
 main {
@@ -65,9 +68,26 @@ main {
 
 /* Nav-bar */
 .nav-bar {
+    position: fixed;
     display: flex;
-    justify-content: center;
     bottom: 0;
+    left: 0;
+    max-width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     width: 100%;
     background-color: var(--primary-color);
+    z-index: 1000;
 }
+
+.nav-item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: none;
+    border: none;
+    cursor: pointer;
+    bottom: 0;
+}
+
