--- a/index.css
+++ b/index.css
@@ -106,4 +106,52 @@ main {
      bottom: 0;
     }
 }
+/* POPUP MENU */
+.popup-menu {
+    position: fixed;
+    right: -500px; /* begint buiten beeld */
+    top: 80px;
+    width: 300px;
+    background-color: var(--grey-background);
+    box-shadow: -3px 0 10px black;
+    transition: 0.4s ease;
+    padding: 1rem;
+    border-radius: 8px;
+}
+
+.popup-menu.open {
+    right: 0; /* schuift in beeld */
+}
+
+.popup-menu ul {
+    margin: 0;
+    padding: 0;
+}
+
+.popup-item {
+    display: flex;
+    align-items: center;
+    padding: 0.6rem;
+    font-size: 1rem;
+    color: var(--primary-color);
+}
+
+.popup-item img {
+    width: 20px;
+    margin-right: 10px;
+}
+
+.popup-item.delete span {
+    color: red;
+}
+
+.clickable {
+    color: var(--primary-action);
+    cursor: pointer;
+}
+
+.clickable:hover {
+    text-decoration: underline;
+    color: var(--primary-action);
+}
 
