--- a/index.css
+++ b/index.css
@@ -91,20 +91,21 @@ main {
 .nav-bar {
     position: fixed;
     bottom: 0;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
     width: 100%;
     background-color: var(--primary-color);
+    
+    ul {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      margin: 0;
+      padding: 0;
+    }
 
-    .nav-item{
+    .nav-item a {
      display: flex;
      justify-content: center;
      align-items: center;
-     background: none;
-     border: none;
-     cursor: pointer;
-     bottom: 0;
+     padding: 0.5rem;
     }
 }
 /* POPUP MENU */
