--- a/password.css
+++ b/password.css
@@ -25,6 +25,30 @@ body {
     }
 }
 
+main{
+    display: flex;
+    justify-content: center;
+}
+
+
+/* Form password */
+.password-form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+}
+
+.password-form label {
+    display: none;
+    }
+
+.form-wrapper input {
+    width: 200%;
+    padding: 12px;
+    border-radius: 8px;
+   
+}    
 
 /* Nav-bar */
 .nav-bar {
