--- a/password.css
+++ b/password.css
@@ -28,6 +28,7 @@ body {
 main{
     display: flex;
     justify-content: center;
+    padding: 50px;
 }
 
 
@@ -39,12 +40,8 @@ main{
 
 }
 
-.password-form label {
-    display: none;
-    }
-
 .form-wrapper input {
-    width: 200%;
+    width: 100%;
     padding: 12px;
     border-radius: 8px;
    
@@ -52,6 +49,8 @@ main{
 
 .done-btn {
     width: 12vw;
+    translate: 20em;
+
 }
 
 /* Nav-bar */
