--- a/password.css
+++ b/password.css
@@ -1,7 +1,7 @@
 /* Body */
 body {
     margin: 0;
-    background-color: var(--grey-background);
+    background-color: var(--white);
     color: var(--primary-color);
 }
 
@@ -26,6 +26,7 @@ body {
 }
 
 main{
+    background-color: var(--grey-background);
     display: flex;
     justify-content: center;
     padding: 50px;
@@ -36,7 +37,7 @@ main{
 .password-form {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.7rem;
 
 }
 
